LCSAP Connectionless-Information-Transfer does not dissect LPPa APDU
This issue was migrated from bug 6839 in our old bug tracker.
Original bug information:
Reporter: James Leskovar
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: Git
Attachments:
message.pcap: LCSAP Connectionless-Transfer procedure with Embedded LPPa payload
lcsap.patch: A patch to set for PayloadType = 1 for Connectionless-Information