From Anders: fix https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=6839 :

A patch to set for PayloadType = 1 for Connectionless-Information

svn path=/trunk/; revision=41050